# pinn_heat_equation

./: .gitignore  README.md  config.py  domain.py  evaluate.py  loss.py  physics.py  pinn.py  pyproject.toml  train.py
tests/: test_domain.py  test_evaluate.py  test_loss.py  test_physics.py  test_pinn.py  test_train.py
